# ContractInfoMCP

./: .gitignore  README.md  env.example  pyproject.toml
contract_inspector/: __init__.py  config.py  contract_analyzer.py  etherscan_client.py  main.py  utils.py  web3_client.py
